--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="menu_home">Home</string>
     <string name="menu_genres">Genres</string>
     <string name="menu_search">Search</string>
+    <string name="menu_account">Account</string>
 </resources>
